[tool.poetry]
name = "fsmgen"
version = "0.1.0"
description = ""
authors = ["Filippo Rossi <filippo.rossi.sc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
click = "^8.1.3"
networkx = "^2.8.7"
pydot = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.scripts]
fsmgen = "fsmgen:main"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
